<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#89B667"
   >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        tools:viewBindingIgnore="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#C5EFCE">
<!--
            tools:viewBindingIgnore="true"
-->

            <LinearLayout
                android:layout_width="303dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#C5EFCE">

                <TextView
                    android:id="@+id/ID"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:paddingLeft="20dp"
                    android:text="@string/id"
                    android:textSize="20sp"

                    tools:paddingLeft="20dp" />

                <TextView
                    android:id="@+id/titleID"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:paddingLeft="20dp"
                    android:text="@string/title"
                    android:textSize="20sp"
                    tools:paddingLeft="20dp" />

                <TextView
                    android:id="@+id/descriptionID"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:paddingLeft="15dp"
                    android:text="@string/description"
                    android:textSize="20sp"
                    tools:paddingLeft="20dp" />

                <TextView
                    android:id="@+id/amountID"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:paddingLeft="20dp"
                    android:text="@string/amount"
                    android:textSize="20sp"
                    tools:paddingLeft="20dp" />

                <TextView
                    android:id="@+id/categoryID"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:paddingLeft="20dp"
                    android:text="@string/category"
                    android:textSize="20sp"
                    tools:paddingLeft="20dp" />

                <TextView
                    android:id="@+id/dateID"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:paddingLeft="20dp"
                    android:text="@string/date"
                    android:textSize="20sp"
                    tools:paddingLeft="20dp" />

                <TextView
                    android:id="@+id/paymentMethodID"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:paddingLeft="20dp"
                    android:text="@string/payment_method"
                    android:textSize="20sp"
                    tools:paddingLeft="20dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="200dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/editButton"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:paddingTop="2dp"
                    android:paddingRight="2dp"
                    android:src="@drawable/index" />

                <ImageView
                    android:id="@+id/deleteButton"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:paddingTop="2dp"
                    android:paddingRight="2dp"
                    android:src="@drawable/_687412" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>