<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/deletePopUp"
        android:layout_width="339dp"
        android:layout_height="208dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:radius="15dp"
        android:background="#2B5E27"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/yesButton"
        android:layout_width="99dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#2B5E27"
        android:radius="15dp"
        android:visibility="visible"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/deletePopUp"
        app:layout_constraintEnd_toEndOf="@+id/deletePopUp"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="@+id/deletePopUp"
        app:layout_constraintTop_toTopOf="@+id/deletePopUp"
        app:layout_constraintVertical_bias="0.878"
        />

    <View
        android:id="@+id/noButton"
        android:layout_width="99dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#2B5E27"
        android:radius="15dp"
        android:visibility="visible"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/deletePopUp"
        app:layout_constraintEnd_toEndOf="@+id/deletePopUp"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="@+id/deletePopUp"
        app:layout_constraintTop_toTopOf="@+id/deletePopUp"
        app:layout_constraintVertical_bias="0.878"/>

    <TextView
        android:id="@+id/noLabel"
        android:layout_width="69dp"
        android:layout_height="32dp"
        android:background="#B52F2F"
        android:gravity="center_horizontal"
        android:text="@string/no"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/noButton"
        app:layout_constraintEnd_toEndOf="@+id/noButton"
        app:layout_constraintStart_toStartOf="@+id/noButton"
        app:layout_constraintTop_toTopOf="@+id/noButton"
        app:layout_constraintVertical_bias="0.565" />

    <TextView
        android:id="@+id/yesLabel"
        android:layout_width="69dp"
        android:layout_height="32dp"
        android:background="#31B73F"
        android:gravity="center_horizontal"
        android:text="@string/yes"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/yesButton"
        app:layout_constraintEnd_toEndOf="@+id/yesButton"
        app:layout_constraintStart_toStartOf="@+id/yesButton"
        app:layout_constraintTop_toTopOf="@+id/yesButton"
        app:layout_constraintVertical_bias="0.565" />

    <TextView
        android:id="@+id/headLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteMessage"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/deletePopUp"
        app:layout_constraintEnd_toEndOf="@+id/deletePopUp"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/deletePopUp"
        app:layout_constraintTop_toTopOf="@+id/deletePopUp"
        app:layout_constraintVertical_bias="0.319" />

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="256dp"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/deletePopUp"
        app:layout_constraintEnd_toEndOf="@+id/deletePopUp"
        app:layout_constraintStart_toStartOf="@+id/deletePopUp"
        app:layout_constraintTop_toTopOf="@+id/deletePopUp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>